--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% load i18n %}
 
@@ -81,13 +80,13 @@ $('.owl-carousel').owlCarousel({
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">{% trans 'Notify me' %}</h5>
         <button type="button" class="close" id="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        {% trans 'Subscribe to notifications about the begining of this auction' %}
       </div>
       <div class="modal-footer">
 
@@ -107,7 +106,7 @@ $('.owl-carousel').owlCarousel({
           </select>
           
         
-          <button type="button" id="btn_notif" class="btn btn-primary btn_confirm" >get notifications</button>
+          <button type="button" id="btn_notif" class="pad-btn2 c-bg-dark c-btn" >{% trans 'Subscribe' %}</button>
         
         </form>
 
@@ -159,7 +158,7 @@ $('.owl-carousel').owlCarousel({
     <div class="toast fade" role="alert" aria-live="assertive" aria-atomic="true" id="toast-notification">
       <div class="toast-header">
         <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#007aff"></rect></svg>
-        <strong class="mr-auto">Notification</strong>
+        <strong class="mr-auto">Well done!</strong>
         <small>now</small>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span id="close-notification" aria-hidden="true">×</span>
@@ -191,26 +190,24 @@ $('.owl-carousel').owlCarousel({
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{% trans 'Terms of contidion' %}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
-<br>
-Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-<br>
-Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.
+        Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+        Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.
       </div>
       <div class="modal-footer">
 
         <form class="form-group" method="POST" data-url="{% url 'index' %}">
           {% csrf_token %}
-          {{form.bid.label}}
+          {% trans 'Your Bid' %}
           
 
-          <input type="number" name="bid" >
+          <input type="number" class="input_bid" name="bid" size="6" readonly>
 
 
           <select name="auction" required="" id="id_auction" hidden>
@@ -220,7 +217,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
           <select name="buyer_id" required="" id="id_buyer_id" hidden>
               <option value="{{user.id}}" selected=""></option>
           </select>
-          <button form="add_form_{{i.id}}" data-id="{{i.id}}"  type="button" id="bid_first_btn_{{i.id}}" class="btn btn-primary btn_confirm" >bid</button>
+          <button form="add_form_{{i.id}}" data-id="{{i.id}}"  type="button" id="bid_first_btn_{{i.id}}" class="pad-btn2 c-bg-dark c-btn" >{% trans 'Make a bid' %}</button>
 
       </form>
 
@@ -336,13 +333,13 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
         </h5>
         <p class="auction_desc mb-40">{{i.description}}</p>
         <p class="card-text">
-          <small class="auction_start_price_pre mr-3" >Start price:<small class="auction_start_price"> <span class="">&#8362;</span> {{i.start_price}}  </small> 
+          <small class="auction_start_price_pre mr-3" >{% trans 'Start price' %}:<small class="auction_start_price"> <span class="">&#8362;</span> {{i.start_price}}  </small> 
           </small>
 
-          <small class="auction_start_price_pre mr-3" >Bid up:<small class="auction_start_price"> {{i.bid_up}}  </small> 
+          <small class="auction_start_price_pre mr-3" >{% trans 'Bid up' %}:<small class="auction_start_price"> {{i.bid_up}}  </small> 
           </small>
 
-          <small class="auction_start_price_pre mr-3">Start was: <span class="auction_start_price" id="start_time_id_{{i.id}}">{{i.start_auction_time}}:00</span></small>
+          <small class="auction_start_price_pre mr-3">{% trans 'Start was' %}: <span class="auction_start_price" id="start_time_id_{{i.id}}">{{i.start_auction_time}}:00</span></small>
         </p>
 
 
@@ -379,7 +376,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
 
 
 
-              <button form="add_form_btn_{{i.id}}" data-id="{{i.id}}" id="add_form_btn_{{i.id}}" type="button" class="pad-btn  c-bg-dark c-btn " onclick="btnBidEvent(event)"  data-toggle="modal" data-target="#exampleModal" >bid</button>
+              <button form="add_form_btn_{{i.id}}" data-id="{{i.id}}" id="add_form_btn_{{i.id}}" type="button" class="pad-btn  c-bg-dark c-btn " onclick="btnBidEvent(event)"  data-toggle="modal" data-target="#exampleModal" >{% trans 'bid' %}</button>
 
           </form>
 
@@ -391,7 +388,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
         
         {% elif user.is_authenticated and user.id == i.seller_id  %}
 
-        <p class="card-text">You cannot make a bids to your auctions</p>
+        <p class="card-text">{% trans 'You cannot make a bids to your auctions' %}</p>
 
 
 
@@ -408,7 +405,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
 
 
         {% else %}
-        <p class="card-text">To bid, please <a href="{% url 'login' %}">log in</a>, or <a href="{% url 'register_page'%}">register</a></p>
+        <p class="card-text">{% trans 'To bid, please' %} <a href="{% url 'login' %}">{% trans 'log in' %}</a>, {% trans 'or' %} <a href="{% url 'register_page'%}">{% trans 'register' %}</a></p>
         
         
         {% endif %}
@@ -417,7 +414,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
         <p class="card-text bid_class" id="bid_list_{{i.id}}">
             {% for bid in  auction_bids %}
                 {% if bid.auction_id == i.id %}
-                <small>bid: {{bid.bid}} | </small>
+                <small>{% trans 'bid' %}: {{bid.bid}} | </small>
                 {% endif %}
             {% endfor %}
         </p>
@@ -431,7 +428,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
           {% for p in prices %}
             {% if p.auction_id == i.id and p.winner == 1%}
             
-            <p >Current price: <span class="current_price_num">&#8362;</span>  <span id="actual_price_val_{{i.id}}" class="current_price_num">{{p.new_price}}</span></p>
+            <p >{% trans 'Current price' %}: <span class="current_price_num">&#8362;</span>  <span id="actual_price_val_{{i.id}}" class="current_price_num">{{p.new_price}}</span></p>
             
 
             <p id="current_buyer_div_{{i.id}">
@@ -443,7 +440,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
 
               {% if i.seller_id ==  p.buyer_id.id %}
                 
-                <span id="current_buyer_{{i.id}}">your bid will be first</span>
+                <span id="current_buyer_{{i.id}}">{% trans 'your bid will be first' %}</span>
 
 
 
@@ -451,14 +448,14 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
               {% else %}
                 
 
-              Leader : 
+              {% trans 'Leader ' %}:
                 <span id="current_buyer_{{i.id}}">{{p.buyer_id.id}}</span>
 
               {% endif %}
             
               {% else %}
 
-                <span id="current_buyer_{{i.id}}">you need to wait until someone to bid</span>
+                <span id="current_buyer_{{i.id}}">{% trans 'you need to wait until someone to bid' %}</span>
 
 
 
@@ -490,7 +487,7 @@ Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, ve
 <div class="col col-md-3">
 
   <div class="all_time_div" >
-    <h5 >Time left</h5>
+    <h5 class="time_left">{% trans 'Time left' %}</h5>
     <div id="timer_{{i.id}}" class="timer_div">
       <!-- <span class="all_time_span">
         <smal id="timer_min_{{i.id}}"></smal>
@@ -512,7 +509,7 @@ float: left;
     <div class="all_time_desc">
       
       <smal id="timer_min_{{i.id}}">__</smal>
-      <smal class="time_desc">minutes</smal>
+      <smal class="time_desc">{% trans 'minutes' %}</smal>
     </div>
 
 </div>
@@ -531,7 +528,7 @@ float: left;
     <div class="all_time_desc">
       
       <smal id="timer_sec_{{i.id}}">__</smal>
-      <smal class="time_desc">seconds</smal>
+      <smal class="time_desc">{% trans 'seconds' %}</smal>
     </div>
 
 </div>
@@ -569,7 +566,7 @@ float: left;
 {% endfor %}
 
 </div>
-<h3>Next 23 auctions</h3>
+<h3>{% trans 'Next 23 auctions' %}</h3>
 
 
 
@@ -597,7 +594,7 @@ float: left;
 
 
       <div class="img_div relative">
-
+      <div class="img_block">
 
         <div class="time_start_div" 
         style="{% if LANGUAGE_BIDI %}
@@ -608,8 +605,8 @@ float: left;
          " >
 
         <span class="time_start_span">
-          <small class="time_start_text">Start time at:</small>
-          <small class="time_start_text">{{schedule.active_date_time}}:00</small>
+          <small class="time_start_text">{{schedule.auction.start_auction}}</small>
+          <small class="time_start_text"> {{schedule.active_date_time}}:00</small>
         </span>
 
 
@@ -636,11 +633,11 @@ float: left;
     </button>
       <img src="{{ MEDIA_URL }}{{ schedule.auction.main_img }}" class="card-img card_img_custom" alt="...">
       </div>
-
+    </div>
       <div class="card-body">
         <h5 class="card-title">{{schedule.auction.title}}</h5>
 
-        <small class="auction_start_price_pre mr-3" >Start price:<small class="auction_start_price"> <span class="">&#8362;</span> {{schedule.auction.start_price}} </small> 
+        <small class="auction_start_price_pre mr-3" >{% trans 'Start price' %}:<small class="auction_start_price"> <span class="">&#8362;</span> {{schedule.auction.start_price}} </small> 
       </small> 
 
 
