limit width in header

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,6 +97,7 @@
 
 
 
+	<div class="container-xl">
 
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light ">
@@ -361,6 +362,7 @@
 		</div>
 	</nav>
 
+</div>
 
 
 
